tests/baselines/reference/missingReturnStatement.errors.txt
==== tests/cases/compiler/missingReturnStatement.ts (1 errors) ====
    module Test {
        export class Bug {
            public foo():string {
                         ~~~~~~
!!! error TS2131: Function declared a non-void return type, but has no return expression.
            }
        }    
    }
    